text overflow fix

--- a/dev/import/styles/styles-outline.scss
+++ b/dev/import/styles/styles-outline.scss
@@ -168,7 +168,7 @@ wrapper[menu-show-id] {
             display: inline-block;
             text-wrap: nowrap;
             text-overflow: ellipsis;
-            overflow: hidden;
+            overflow-x: clip;
             max-width: 100%;
         }
     }
